# llcraft

./: .gitignore  .gitmodules  Cargo.toml  README.md  ideas.md  prd.json  progress.txt
llcraft-agent/: Cargo.toml
llcraft-agent/src/: agent.rs  lib.rs
llcraft-cli/: Cargo.toml
llcraft-cli/src/: main.rs
llcraft-error/: Cargo.toml
llcraft-error/src/: error.rs  kind.rs  lib.rs  status.rs
llcraft-trie/: Cargo.toml
llcraft-trie/src/: error.rs  lib.rs  main.rs  nibbles.rs  node.rs  proof.rs  trie.rs
llcraft-vm/: Cargo.toml
llcraft-vm/examples/: agent.rs  interpreter_demo.rs  ralph-progress.txt  ralph.json  test_provider.rs
llcraft-vm/src/: error.rs  interpreter.rs  lib.rs  memory.rs  opcode.rs  schema.rs  session.rs  stack.rs  storage.rs
llcraft-vm/src/prompts/: system.md  user.md
llcraft-vm/src/provider/: anthropic.rs  bridge.rs  mod.rs  openai.rs
