[package]
name = "llcraft-cli"
version = "0.1.0"
edition = "2021"
description = "LLcraft CLI - Command-line interface for the agent"

[[bin]]
name = "llcraft"
path = "src/main.rs"

[dependencies]
llcraft-agent = { path = "../llcraft-agent" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
