[package]
name = "mpt_trie"
version = "0.1.0"
edition = "2021"
description = "Merkle Patricia Trie implementation for Ethereum state storage"
authors = ["yibai"]

[dependencies]
# Reuse our primitives library
eth_primitives = { path = "../rust-eth-primitives" }

# RLP encoding
alloy-rlp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Hex encoding
hex = "0.4"

[[bin]]
name = "mpt"
path = "src/main.rs"
