[package]
name = "llcraft-vm"
version = "0.1.0"
edition = "2021"
description = "LLM Virtual Machine - where LLMs are the CPU"

[dependencies]
llcraft-error = { path = "../llcraft-error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-core = "0.3"
futures-util = "0.3"
futures-task = "0.3"
async-stream = "0.3"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.24.0"
tokio-test = "0.4"

[[example]]
name = "test_provider"
path = "examples/test_provider.rs"
